tests/miniJava/neg/006733_mutation.MiniJava
class java { public void static Main ( String [ ] java ) { { } } }
